--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,17 +10,17 @@ jobs:
       matrix:
         system:
           - x86_64-linux
-          - aarch64-linux
+          # - aarch64-linux
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install nix
         uses: DeterminateSystems/nix-installer-action@main
         with:
-          extra-conf: experimental-features = nix-command flakes repl-flake
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run the magic nix cache
         uses: DeterminateSystems/magic-nix-cache-action@main
-      - run: nix build .#app-images.${{ matrix.system }}.default  --print-build-logs
+      - run: nix build .#app-images.${{ matrix.system }}.default --show-trace  --print-build-logs
 
       - name: Create Draft Release
         id: create_release
