--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,27 +22,12 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
       - run: nix build .#app-images.${{ matrix.system }}.default --show-trace  --print-build-logs
 
-      - name: Create Draft Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: cp $(realpath result) tu-${{ matrix.system }}.AppImage
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
         with:
-          release_name: nightly
-          draft: true
+          name: nightly
           prerelease: true
-
-      - uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./result
-          asset_name: tu.AppImage
-          asset_content_type: application/x-executable
-
-      - uses: eregon/publish-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          release_id: ${{ steps.create_release.outputs.id }}
+          files: tu*.AppImage
+          token: ${{ secrets.GITHUB_TOKEN }}
