--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           name: nightly
+          tag_name: nightly
           prerelease: true
           files: tu*.AppImage
           token: ${{ secrets.GITHUB_TOKEN }}
