--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         system:
           - x86_64-linux
-          # - aarch64-linux
+          - aarch64-linux
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,6 +20,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run the magic nix cache
         uses: DeterminateSystems/magic-nix-cache-action@main
+      - uses: cachix/cachix-action@v14
+        with:
+          name: gabedunn
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - run: nix build .#app-images.${{ matrix.system }}.default --accept-flake-config --print-build-logs
       - run: cp $(realpath result) tu-${{ matrix.system }}.AppImage
 
