--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,14 +3,8 @@ on:
   push:
     branches:
       - master
-  # pull_request:
 jobs:
   release:
-    strategy:
-      matrix:
-        system:
-          - x86_64-linux
-          - aarch64-linux
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -24,8 +18,8 @@ jobs:
         with:
           name: gabedunn
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-      - run: nix build .#app-images.${{ matrix.system }}.default --accept-flake-config --print-build-logs
-      - run: cp $(realpath result) tu-${{ matrix.system }}.AppImage
+      - run: nix build .#app-images.x86_64-linux.default --print-build-logs
+      - run: cp $(realpath result) tu-nightly-x86_64-linux.AppImage
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
